# CelestiaCore

./: .gitignore  CMakeLists.txt  README.md
assets/fonts/: .gitignore
include/: FrameTimer.h  Renderer.h  Resources.h  Shader.h  WindowSDLGL.h
shader/: fragmentShader.frag  vertexShader.vert
src/: FrameTimer.cpp  Renderer.cpp  Resources.cpp  Shader.cpp  WindowSDLGL.c  WindowSDLGL.cpp  main.cpp
